--- a/public/styles.css
+++ b/public/styles.css
@@ -536,7 +536,7 @@ input::placeholder {
   border: 2px solid #ef552f;
 }
 
-.wrapper h2 {
+.faq_main_title {
   font-weight: bold;
   font-size: 29px;
   color: #ef552f;
